DDD or clean architecture proj

--- a/WhatFlix.Api/wwwroot/index.html
+++ b/WhatFlix.Api/wwwroot/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WhatFlix</title>
+        <title>WhatFlix =</title>
     </head>
     <body>
         <h1>Welcome to WhatFlix!</h1>
+            <button onclick="window.location='updateCovid19Location.html'">UpdateCovid19Location</button>
     </body>
 </html>
